feat: CLI